--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</form>
 		<div class="weather-details">
 			<h2>Weather Details</h2>
-			<h3>THUNDERSTORM WITH LIGHT DRIZZLE</h3>
+			<h3>THUNDERSTORM WITH LIGHT</h3>
 			<div class="detail-row">
 				<span>Temp max</span>
 				<span class="temp-max">19° </span>
